--- a/kmeans.ui
+++ b/kmeans.ui
@@ -75,7 +75,7 @@
         </font>
        </property>
        <property name="text">
-        <string>退出</string>
+        <string>停止</string>
        </property>
       </widget>
      </item>
