--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -599,6 +599,28 @@
           </spacer>
          </item>
          <item>
+          <widget class="QLineEdit" name="K_type_2">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>300</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>在此输入预测类型(1:open;2:high;3:low;4:close)</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="K_button_2">
            <property name="minimumSize">
             <size>
